--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-i18n": "^6.27.3",
+    "vue-cookie-law": "^1.13.3",
     "vue-notification": "^1.3.20"
   },
   "devDependencies": {
